# template-python-flask

./: .env.example  .gitignore  LICENSE  NOTICES.md  README.md  bma.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: __init__.py  demo.py  demo_data.py  demo_seed.py
scripts/: walkthrough_screenshots.py
tests/: test_demo_seed.py  test_smoke.py  test_walkthrough_screenshots.py
